Fixed centering issue on mobile

--- a/extra.css
+++ b/extra.css
@@ -47,6 +47,7 @@ a[target="_blank"]:after {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 /** Dark theme icon */
